chrome/browser/ui/cocoa/tabs/tab_view.mm
@@ -603,6 +603,7 @@ CGFloat LineWidthFromContext(CGContextRef context) {
     return;
   state_ = state;
   [self setNeedsDisplay:YES];
+  [closeButton_ setNeedsDisplay:YES];
 }
 
 - (void)setClosing:(BOOL)closing {
